<resources>
    <string name="app_name">Nomdo</string>
    <string name="username_email">Username / E-mail</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="image_mail">Image Mail</string>
    <string name="password">Password</string>
    <string name="image_password">Image Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_code">Confirmation Code</string>
    <string name="send_confirm_code">Send Confirmation Code</string>
    <string name="confirm">Confirm</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="my_workspace">My Workspace</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anonymous</string>
    <string name="nav_header_subtitle">anonymous@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="article">Article</string>
    <string name="my_workspaces">My Workspaces</string>
    <string name="shared_workspaces">Shared Workspaces</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="notifications">Notifications</string>
    <string name="add_action_button">Add Action Button</string>

    <string-array name="name">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="creator">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>