<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_workspaces"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_workspaces" />
        <item
            android:id="@+id/nav_shared_workspaces"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/shared_workspaces" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

</menu>