<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nomdoa5.nomdo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_workspaces"
        android:name="com.nomdoa5.nomdo.ui.workspaces.MyWorkspacesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_my_workspaces" >
        <action
            android:id="@+id/action_nav_my_workspaces_to_nav_boards"
            app:destination="@id/nav_boards" />
    </fragment>

    <fragment
        android:id="@+id/nav_shared_workspaces"
        android:name="com.nomdoa5.nomdo.ui.workspaces.SharedWorkspacesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_shared_workspaces" >
        <action
            android:id="@+id/action_nav_shared_workspaces_to_nav_boards"
            app:destination="@id/nav_boards" />
    </fragment>
    <fragment
        android:id="@+id/nav_boards"
        android:name="com.nomdoa5.nomdo.ui.boards.BoardsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_boards" >
        <action
            android:id="@+id/action_nav_boards_to_nav_tasks"
            app:destination="@id/nav_tasks" />
    </fragment>
    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.nomdoa5.nomdo.ui.tasks.TaskFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_task" >
        <action
            android:id="@+id/action_nav_tasks_to_detailTaskFragment"
            app:destination="@id/detailTaskFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailTaskFragment"
        android:name="com.nomdoa5.nomdo.ui.tasks.DetailTaskFragment"
        android:label="fragment_detail_task"
        tools:layout="@layout/fragment_detail_task" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.nomdoa5.nomdo.ui.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/dialog_fragment_logout" />
</navigation>