<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/sign_up"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_balance"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_username_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusDown="@+id/edit_email_sign_up" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email_sign_up"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/layout_balance"
        app:layout_constraintStart_toStartOf="@+id/layout_balance"
        app:layout_constraintTop_toBottomOf="@+id/layout_balance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/edit_phone_sign_up" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phone_sign_up"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/layout_email_sign_up"
        app:layout_constraintStart_toStartOf="@+id/layout_email_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/layout_email_sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_phone_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:nextFocusDown="@+id/edit_password_sign_up" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password_sign_up"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/black"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/layout_phone_sign_up"
        app:layout_constraintStart_toStartOf="@+id/layout_phone_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/layout_phone_sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/edit_confirm_sign_up" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_confirm_sign_up"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/black"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/layout_password_sign_up"
        app:layout_constraintStart_toStartOf="@+id/layout_password_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/layout_password_sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_confirm_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_accent"
        android:fontFamily="@font/roboto_bold"
        android:padding="15dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/layout_confirm_sign_up"
        app:layout_constraintStart_toStartOf="@+id/layout_confirm_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/layout_confirm_sign_up" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_google_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_gray"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/sign_in_with_google"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        app:drawableStartCompat="@drawable/ic_google"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />
</androidx.constraintlayout.widget.ConstraintLayout>