<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.Nomdo.AppBarOverlay"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_task"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:elevation="0dp"
        android:theme="@style/Theme.Nomdo.ToolbarOverlay"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/navigation_drawer"
                android:src="@drawable/ic_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLength="20"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/navigation"
                app:layout_constraintStart_toEndOf="@+id/navigation"
                app:layout_constraintTop_toTopOf="@+id/navigation" />

            <TextView
                android:id="@+id/toolbar_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="nama workspace"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/white_50t"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar_title"
                app:layout_constraintStart_toEndOf="@+id/toolbar_title"
                app:layout_constraintTop_toTopOf="@+id/toolbar_title"
                app:layout_constraintVertical_bias="0.75" />


            <ImageView
                android:id="@+id/dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/notifications"
                android:src="@drawable/ic_dropdown"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar_subtitle"
                app:layout_constraintStart_toEndOf="@+id/toolbar_subtitle"
                app:layout_constraintTop_toTopOf="@+id/toolbar_subtitle" />

            <ImageView
                android:id="@+id/notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/notifications"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.AppBarLayout>
